# LCTHW

./: README.md
1/: ex1  ex1.c
10/: Makefile  ex10  ex10.c
11/: Makefile  ex11
12/: Makefile  ex12
13/: Makefile  ex13  ex13-2  ex13-2.c
14/: Makefile  ex14  ex14.c
15/: Makefile  ex15  ex15.c
16/: Makefile  ex16  ex16.c
17/: Makefile  ex17  ex17.c  stack.c
18/: Makefile  ex18  ex18.c
2/: Example of Makefile  Makefile  ex1
3/: Makefile  ex3
32/: Makefile  test  test.c
33/: CMakeLists.txt  list.c  list_algos.c  list_algos_test.c  minunit.h
4/: Makefile  error.txt  errorTrack.txt  ex4  ex4Right  ex4Right.c
42/: CMakeLists.txt  list.h  list_algos.h  queue.h  stack.h  test_queue.c  test_stack.c
44/: CMakeLists.txt  RingBuffer.c  RingBuffer.h  bstrlib.c  bstrlib.h  test.c
5/: Makefile  ex5
6/: Makefile  error.txt  ex6  ex6.c
7/: Makefile  ex7  ex7.c
8/: Makefile  ex8  ex8.c
9/: Makefile  ex9  ex9.c
